--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -73,6 +73,20 @@
         <div id="content">
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
+          {{ else if eq $section "about" }}
+            <div id="main">
+              <h1>About</h1>
+
+              <ol id="about-nav">
+                {{ $abouts := sort (where .Site.RegularPages "Params.section" "about") "Params.order"  }}
+                {{ range $about := $abouts }}
+                <li>
+                  <a href="{{ relURL (strings.TrimSuffix ".html" $about.RelPermalink) }}" class="{{ $about.Params.display_class }}{{ if eq $.Params.subsection $about.Params.subsection }} current{{ end }}">{{ $about.Params.subtitle }}</a>
+                </li>
+                {{ end }}
+              </ol>
+              {{ .Content }}
+            </div>
           {{ else }}
             {{ .Content }}
           {{ end }}
