Adjust the "references" page to Hugo
The categories shown on the references page are added to `data/` and
used via the new `category` shortcode.

This new shortcode is actually only a shim that hands off to the new
`category` partial layout; This is done in that manner to allow reusing
the latter in the upcoming commit where the `Topics` drop-down of the
manual pages is populated.

Signed-off-by: Victoria Dye <vdye@github.com>
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/partials/ref/index.html
+++ b/layouts/partials/ref/index.html
@@ -1,15 +1,12 @@
-<%- @section    = 'documentation' %>
-<%- @subsection = 'reference' %>
-<%- @page_title = "Git - Reference" %>
-
+{{ $context := . }}
 <div id='main'>
   <h1>Reference</h1>
   <div class='callout quickref'>
     <p>
       Quick reference guides:
-      <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/" %>
+      <a href="https://github.github.com/training-kit/">GitHub Cheat Sheet</a>
       |
-      <%= link_to "Visual Git Cheat Sheet", "https://ndpsoftware.com/git-cheatsheet.html" %>
+      <a href="https://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
     </p>
   </div>
   <div class="callout all-commands">
@@ -18,22 +15,16 @@
   <div class='reference-menu'>
     <div class='two-column'>
       <div class='column-left'>
-        <%= render 'shared/ref/setup' %>
-        <%= render 'shared/ref/creating' %>
-        <%= render 'shared/ref/snapshot' %>
-        <%= render 'shared/ref/branching' %>
-        <%= render 'shared/ref/sharing' %>
-        <%= render 'shared/ref/inspection' %>
-        <%= render 'shared/ref/patching' %>
-        <%= render 'shared/ref/debugging' %>
+        {{ range slice "setup" "projects" "snapshotting" "branching" "sharing" "inspection" "patching" "debugging" }}
+        {{ $context.Scratch.Set "category_id" . }}
+        {{ partial "ref/category.html" $context }}
+        {{ end }}
       </div>
       <div class='column-right'>
-        <%= render 'shared/ref/guides' %>
-        <%= render 'shared/ref/email' %>
-        <%= render 'shared/ref/external' %>
-        <%= render 'shared/ref/admin' %>
-        <%= render 'shared/ref/server' %>
-        <%= render 'shared/ref/plumbing' %>
+        {{ range slice "guides" "email" "external" "admin" "server-admin" "plumbing" }}
+        {{ $context.Scratch.Set "category_id" . }}
+        {{ partial "ref/category.html" $context }}
+        {{ end }}
       </div>
     </div>
   </div>
