--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -74,6 +74,7 @@
       {{ partial "footer.html" . }}
     </div> <!-- #content-wrapper -->
   {{ else if (isset .Params "book") }}
+    {{ .Scratch.Set "book" (index .Site.Data.book .Params.book.language_code) }}
     <div class="inner">
       <div id="content-wrapper">
         {{ partial "sidebar.html" . }}
@@ -82,12 +83,7 @@
             {{ partial "book-front-page.html" . }}
           {{ else }}
           <div id="book-chapters">
-            <a class="dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#">Chapters ▾</a>
-            <div class="dropdown-panel" id="chapters-dropdown">
-              <div class="three-column">
-                TODO!
-              </div>
-            </div>
+            {{ partial "chapters.html" . }}
 
             <span class="light" id="edition">
               2nd Edition
