--- a/layouts/partials/ref/category.html
+++ b/layouts/partials/ref/category.html
@@ -4,7 +4,11 @@
 <ul class='unstyled'>
   {{ range $doc := $category.commands }}
   <li>
-    <a href="{{ print "/docs/" $doc.doc (cond (and (ne $.Page.Params.lang nil) (ne $doc.no_append_lang true) (isset (index $.Site.Data.docs.pages $doc.doc) "languages") (isset (index $.Site.Data.docs.pages $doc.doc "languages") $.Page.Params.lang)) (print "/" $.Page.Params.lang) "") }}">
+    {{ if (eq $doc.doc "credential-helpers") }}
+      <a href="doc/credential-helpers">
+    {{ else }}
+      <a href="{{ print "/docs/" $doc.doc (cond (and (ne $.Page.Params.lang nil) (ne $doc.no_append_lang true) (isset (index $.Site.Data.docs.pages $doc.doc) "languages") (isset (index $.Site.Data.docs.pages $doc.doc "languages") $.Page.Params.lang)) (print "/" $.Page.Params.lang) "") }}">
+    {{ end }}
       {{ if (eq $doc.title nil) }}
         {{ replace $doc.doc "git-" "" }}
       {{ else }}
