Direct Pagefind what parts of the pages to index
We are now using Pagefind to perform a client-side search. To avoid
searching even the uninteresting parts of the pages (like navbar,
footer, etc), let's mark specifically the body of the pages that we want
to be searchable.

The front page is specifically not marked as searchable because it is
too generic to be a useful search result.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -69,14 +69,14 @@
     <div id="content-wrapper">
       <div class="inner">
         {{ partial "site-root.html" . }}
-        {{ partial "footer.html" . }}
       </div> <!-- .inner -->
+      {{ partial "footer.html" . }}
     </div> <!-- #content-wrapper -->
   {{ else }}
     <div class="inner">
       <div id="content-wrapper">
         {{ partial "sidebar.html" . }}
-        <div id="content">
+        <div id="content" data-pagefind-body>
           {{ if (eq .Page.Path "/docs") }}
             {{ partial "ref/index.html" . }}
           {{ else if isset .Params "video_title" }}
